@@ -129,6 +129,7 @@ public class CanvasToolBarNew {
 	MenuItem simplifyAllLinesItem;
 	MenuItem removeSmallTextRegionsItem;
 	MenuItem removeSmallTextLinesItem;
+	MenuItem mergeSmallTextLinesItem;
 	MenuItem copyShapesItem;
 	MenuItem rectifyAllRegionsItem;
 	
@@ -479,7 +480,8 @@ public class CanvasToolBarNew {
 		simplifyAllLinesItem = otherSegmentationToolsDropDown.addItem("Simplify shape of all lines on this page", Images.getOrLoad("/icons/vector.png"), null);
 		removeSmallTextRegionsItem = otherSegmentationToolsDropDown.addItem("Remove small text regions...", null, null);
 		removeSmallTextLinesItem = otherSegmentationToolsDropDown.addItem("Remove small text lines...", null, null);
-		copyShapesItem = otherSegmentationToolsDropDown.addItem("Copy shapes to other pages...", null, "Copy selected regions or tables - including lines and text if available. Copy only lines is not possible.");
+		mergeSmallTextLinesItem = otherSegmentationToolsDropDown.addItem("Merge small text lines...", null, null);
+		copyShapesItem = otherSegmentationToolsDropDown.addItem("Copy regions (text or tables) to other pages...", null, "Copy selected regions or tables - including lines and text if available. Copy only lines is not possible.");
 		rectifyAllRegionsItem = otherSegmentationToolsDropDown.addItem("Convert all region shapes to rectangles", null, null);
 		}
 		
