@@ -709,5 +709,7 @@ CHANGES AND BUGFIXES
 	-> Undo a job (see the 'Jobs Overview': 'Undo button' will be enabled if the docID of the job corresponds to the ID of the currently loaded document)
 	-> Documents moved to the recycle bin are automatically discarded after two weeks
 	-> New cool feature ;) can be found here: 'Canvas tool bar' - 'Other segmentation tools' - 'Copy shapes to other pages': after the user has drawn table or text regions he wants to copy this table/text regions for all the other pages as well because they look pretty much the same
+	-> And another one: same same but different: 'Canvas tool bar' - 'Other segmentation tools' - 'Remove small text lines': deletes lines which are very small in relation to their region - needs to be checked afterwards
+	-> Last but not least in this series: 'Canvas tool bar' - 'Other segmentation tools' - 'Merge small text lines': automatically merges small text lines in the same row (should be used carefully)
 	
 	
